# obsidian-agent

./: .gitignore  README.md  build_index.py  chat.py  config.example.json  config.py  pyproject.toml  rag_agent.py  rag_store.py
src/cli/: build_index.py  chat.py
src/core/: config.py  rag_agent.py  rag_session.py  rag_store.py
src/input/: chat_input.py
src/sessions/: chat_sessions.py
src/storage/: chat_history_store.py
src/ui/: chat_ui.py
